# thrushc

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.md  one-novelty.md  proposal.md
dependencies/llvm-sys-v170.2.0/: Cargo.toml
dependencies/llvm-sys.rs-v170.2.0/: build.rs
src/: cli.rs  constants.rs  diagnostic.rs  error.rs  logging.rs  main.rs  utils.rs
src/backend/: builder.rs  compiler.rs  infraestructure.rs  instruction.rs  llvm.rs  mod.rs  objects.rs  opcode.rs  optimizer.rs
src/backend/apis/: debug.rs  vector.rs
src/backend/compiler/: codegen.rs  functions.rs  general.rs  llvm.rs  locals.rs  mod.rs  objects.rs  options.rs  utils.rs  variable.rs
src/backend/infraestructures/: define.rs  mod.rs  vector.rs
src/backend/natives_apis/: debug.rs  mod.rs  vector.rs
src/cli/: mod.rs
src/compiler/: mod.rs
src/compiler/backend/: codegen.rs  llvm.rs  mod.rs
src/compiler/frontend/: diagnostic.rs  lexer.rs  mod.rs  parser.rs
src/frontend/: checking.rs  lexer.rs  mod.rs  objects.rs  parser.rs  scoper.rs  type_checking.rs
