[package]
name = "thrushc"
description = "The Compiler for Thrush Programming language."
version = "1.0.0"
edition = "2021"
authors = ["DevCheckOG [https://github.com/DevCheckOG]"]

[dependencies]
stylic = "0.2.3"
ahash = "0.8.11"
lazy_static = "1.5.0"
regex = "1.11.1"
inkwell = { version = "0.5.0", features = [
    "llvm17-0",
    "llvm17-0-force-static"
]}

[build-dependencies]
llvm-sys = { version = "170.2.0", path = "dependencies/llvm-sys-v170.2.0", features = ["force-static"]}

[profile.dev]
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
debug = false
strip = true
incremental = true